--- a/assignment-2/style.css
+++ b/assignment-2/style.css
@@ -1,26 +1,24 @@
-.flip {
+.image-container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 20px;
+}
+
+.image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300%;
+  height: 100%;
+  backface-visibility: hidden;
   transition: transform 0.6s;
-  transform-style: preserve-3d;
 }
 
 .flipped {
   transform: rotateY(180deg);
 }
 
-.image-container {
-  perspective: 1000px;
-}
-
-img {
-  width: 800px;
-  height: 300px;
-}
-
-
-#section1-img2,
-#section2-img2,
-#section3-img2 {
-  display: none;
-  visibility: hidden;
-  position: absolute;
+.flipped-back {
+  transform: rotateY(0deg);
 }
